GNOME Bugzilla – Bug 644149
CRITICAL: Tried to remove non-existing item from chooser
Last modified: 2011-03-07 21:47:39 UTC
Created attachment 182756 [details] greeter log for first crash (subsequent crashes have same backtrace/error) See log. On boot, the chooser constantly crashes in a loop upon drawing the user list. gdm-2.91.91-1.fc15 accountsservice-0.6.4-2.fc15
Trigger appears to be 'root is logged in on a VT'.
This is the same old "you need accountsservice-0.6.4-3.fc15" bug i think.
It persists with that version if root is logged in.
... gdm-simple-greeter[1990]: DEBUG(+): GdmUserChooserWidget: updating other user visibility gdm-simple-greeter[1990]: DEBUG(+): GdmChooserWidget: selection change to list path '2' gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: Found x11 display of session '/org/freedesktop/ ConsoleKit/Session3': gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: finding user root state 1 gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: finding user root state 2 gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: Looking for user root in accounts service gdm-simple-greeter[1990]: DEBUG(+): ActUser: adding session /org/freedesktop/ConsoleKit/Session3 gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: added session for user: (null) gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: Found x11 display of session '/org/freedesktop/ConsoleKit/Session4': :0 gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: Found object path of user 'root': /org/freedesktop/Accounts/User0 gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: finding user root state 3 gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: user root fetched gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: finished handling request for user root gdm-simple-greeter[1990]: DEBUG(+): ActUserManager: user changed gdm-simple-greeter[1990]: DEBUG(+): GdmUserChooserWidget: font height 21; using icon size 63 gdm-simple-greeter[1990]: DEBUG(+): GdmUserChooserWidget: User added name:root logged-in:0 pixbuf:0xd64630 gdm-simple-greeter[1990]: CRITICAL: Tried to remove non-existing item from chooser aborting... gdm[2027]: ******************* START ********************************** ...
The following fix has been pushed: 9ec8f69 greeter: don't tank if accounts service removes user we don't know about
Created attachment 182774 [details] [review] greeter: don't tank if accounts service removes user we don't know about The chooser right now will throw a critical if we try to remove an item that doesn't exist. There are some situations where users get removed from the account service that we never added to the user list. In those cases, we need to be careful not to try to remove them to prevent crash-inducing criticals.